--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div class="subheading mb-5">(+212) 661-529-243 ·
             <a href="mailto:redahalib@gmail.com">redahalib@gmail.com</a>
           </div>
-          <p class="lead mb-5">Creative individual with a background in : <br>Engineering/WebDevelopment & Entrepreneurship/Innovation. <br> <br>Passionate about #startups #ventures #disruption #housemusic #tennis. <br><br> CEO of 
+          <p class="lead mb-5">Creative individual with a background in : <br>Engineering/WebDevelopment & Entrepreneurship/Innovation. <br> <br>Passionate about : <br> #startups #ventures #disruption #housemusic #tennis. <br><br> CEO of 
           <strong><a href="http://www.winwinly.com">Winwinly</a></strong>, a reverse auction marketplace where customers can negotiate any product's price..</p>
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/redahalib/">
