--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <a href="mailto:redahalib@gmail.com">redahalib@gmail.com</a>
           </div>
           <p class="lead mb-5">Creative individual with a background in Engineering/WebDevelopment & Entrepreneurship/Innovation. <br> <br>Passionate about #startups #ventures #disruption #IoT #blockchain #tennis #housemusic #chess. <br><br> CEO of 
-          <strong><a href="http://www.winwinly.com">Winwinly</a></strong>, a reverse auction marketplace where customers can negotiate any product's price..</p>
+          <strong><a href="http://www.winwinly.com">Winwinly</a></strong>, a reverse auction marketplace where customers can negotiate any product's price.</p>
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/redahalib/">
               <i class="fab fa-linkedin-in"></i>
