--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <a href="https://github.com/redahalib">
               <i class="fab fa-github"></i>
             </a>
-            <a href="https://twitter.com/redaaa">
+            <a href="https://twitter.com/redahalib">
               <i class="fab fa-twitter"></i>
             </a>
             <a href="https://www.facebook.com/redaaa">
