actualisation des dossiers et de l'index

--- a/index.html
+++ b/index.html
@@ -75,18 +75,19 @@
             <a href="https://www.linkedin.com/in/redahalib/">
               <i class="fab fa-linkedin-in"></i>
             </a>
+             <a href="https://angel.co/redahalib">
+              <i class="fab fa-angellist"></i>
+            </a>
             <a href="https://github.com/redahalib">
               <i class="fab fa-github"></i>
             </a>
             <a href="https://twitter.com/redahalib">
               <i class="fab fa-twitter"></i>
             </a>
-            <a href="https://www.facebook.com/redaaa">
-              <i class="fab fa-facebook-f"></i>
-            </a>
           </div>
         </div>
       </section>
+    </div>
 
       <hr class="m-0">
 
