--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
           <h1 class="mb-0">Reda
             <span class="text-primary">Halib</span>
           </h1>
-          <div class="subheading mb-5">(+212) 661-529-243 ·
+          <div class="subheading mb-5">(+212) 661-529-243 / (+1) 747-219-7233  ·
+
             <a href="mailto:redahalib@gmail.com">redahalib@gmail.com</a>
           </div>
           <p class="lead mb-5">Creative individual with a background in Engineering/WebDevelopment & Entrepreneurship/Innovation. <br> <br>Passionate about #startups #ventures #disruption #IoT #blockchain #tennis #housemusic #chess. <br><br> CEO of 
@@ -93,7 +94,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">CEO & CO-FOUNDER</h3>
-              <div class="subheading mb-3"><a href="http://www.winwinly.com">Winwinly</a></div>
+              <div class="subheading mb-3"><a href="http://www.winwinly.com">Winwinly</a> - Toronto, Canada</div>
               <p class="text-justify"> Working on the MVP/Prototype. <br>Building business model & competitive strategy. <br> Preparation of pitch deck for fundraising process.</p>
             </div>
             <div class="resume-date text-md-right">
@@ -104,7 +105,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Deputy Director</h3>
-              <div class="subheading mb-3"><a href="http://www.ocit.ma">OCIT</a></div>
+              <div class="subheading mb-3"><a href="http://www.ocit.ma">OCIT</a> - Casablanca, Morocco</div>
               <p class="text-justify">Leading and actively pursuing new business and project opportunities.<br>  Implementing strategies which contribute to revenue generation and profitability.<br> 
               Managing and/or reviewing projects from the proposal stage through to completion.</p>
             </div>
@@ -116,7 +117,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Regional Manager</h3>
-              <div class="subheading mb-3"><a href="http://www.tilllate.world">TILLLATE</a></div>
+              <div class="subheading mb-3"><a href="http://www.tilllate.world">TILLLATE</a> - Paris, France</div>
               <p class="text-justify">Hiring photographers in main "Centre region" cities : Tours, Orleans, Chartres, Blois. <br> Exclusive rights’ negotiations with main nightclubs and bars. <br>Training photographers to digital retouching on Photoshop & Picasa.</p>
             </div>
             <div class="resume-date text-md-right">
