--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Advanced Master - Entrepreneurship & Innovation Mgmt</h3>
-              <div class="subheading mb-3"><a href="https://www.em-lyon.com/en/">EmLyon Business School</a></div>
+              <div class="subheading mb-3"><a href="https://www.em-lyon.com/en/">EmLyon Business School</a> - Lyon, France</div>
               <p class="text-justify">Thesis : possibility of financing mobile 4G and allowing moroccan prepaid plan holders to stay in touch with their families through targeted non-invasive phone ads.</p>
             </div>
             <div class="resume-date text-md-right">
@@ -147,7 +147,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Master of Science - Engineering</h3>
-              <div class="subheading mb-3"><a href="https://www.sorbonne-universite.fr/en">Pierre and Marie Curie - Sorbonne University</a></div>
+              <div class="subheading mb-3"><a href="https://www.sorbonne-universite.fr/en">Pierre and Marie Curie - Sorbonne University</a> - Paris, France</div>
               <p>Thesis : Darcy’s law in porous media & coding finite-difference methods with Matlab.</p> 
             </div>
             <div class="resume-date text-md-right">
@@ -158,7 +158,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Bachelor of Science - Engineering</h3>
-              <div class="subheading mb-3"><a href="https://www.sorbonne-universite.fr/en">Pierre and Marie Curie - Sorbonne University</a></div>
+              <div class="subheading mb-3"><a href="https://www.sorbonne-universite.fr/en">Pierre and Marie Curie - Sorbonne University</a> - Paris, France</div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Sep 2006 - Sep 2011</span>
