--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Advanced Master - Entrepreneurship & Innovation Mgmt</h3>
-              <div class="subheading mb-3"><a href="https://www.em-lyon.com/en/">EmLyon Business School</a> - Lyon, France</div>
+              <div class="subheading mb-3"><a href="https://www.em-lyon.com/en/">EmLyon Business School</a> - Lyon, France / Casablanca, Morocco</div>
               <p class="text-justify">Thesis : possibility of financing mobile 4G and allowing moroccan prepaid plan holders to stay in touch with their families through targeted non-invasive phone ads.</p>
             </div>
             <div class="resume-date text-md-right">
