--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
           <h1 class="mb-0">Reda
             <span class="text-primary">Halib</span>
           </h1>
-          <div class="subheading mb-5">(+212) 661-529-243 / (+1) 747-219-7233  ·
+          <div class="subheading mb-5">(+212) 661-529-243 / (+1) 438-838-9857  ·
 
             <a href="mailto:redahalib@gmail.com">redahalib@gmail.com</a>
           </div>
           <p class="lead mb-5">Creative individual with a background in Engineering/WebDevelopment & Entrepreneurship/Innovation. <br> <br>Passionate about #startups #ventures #disruption #IoT #blockchain #tennis #housemusic #chess. <br><br> CEO of 
-          <strong><a href="http://www.winwinly.com">Winwinly</a></strong>, a reverse auction marketplace where customers can negotiate any product's price.</p>
+          <strong><a href="http://www.winwinly.com">Winwinly</a></strong>, a reverse auction marketplace where customers can negotiate all products' prices.</p>
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/redahalib/">
               <i class="fab fa-linkedin-in"></i>
