--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">VP of Engineering</h3>
-              <div class="subheading mb-3"><a href="http://www.ocit.ma">OCIT</a> - Casablanca, Morocco</div>
+              <div class="subheading mb-3"><a href="https://laboratoire-ocit.github.io/">OCIT</a> - Casablanca, Morocco</div>
               <p class="text-justify">Leading and actively pursuing new business and project opportunities.<br>  Implementing strategies which contribute to revenue generation and profitability.<br> 
               Managing and/or reviewing projects from the proposal stage through to completion.</p>
             </div>
