--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">CEO & CO-FOUNDER</h3>
-              <div class="subheading mb-3"><a href="http://www.winwinly.com">Winwinly</a> - Toronto, Canada</div>
+              <div class="subheading mb-3"><a href="http://www.winwinly.com">Winwinly</a> - Toronto, Canada / Paris, France</div>
               <p class="text-justify"> Working on the MVP/Prototype. <br>Building business model & competitive strategy. <br> Preparation of pitch deck for fundraising process.</p>
             </div>
             <div class="resume-date text-md-right">
@@ -280,6 +280,12 @@
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               <a href="http://www.startupschool.org/companies/winwinly">Startup School - Advisor Track, Y Combinator</a></li>
+            <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              <a href="https://stationf.co/apply/founders">Founders Program, Station F incubator</a></li>
+            <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              <a href="https://collisionconf.com">Featured on stage during Opening Night, Collision Conference</a></li>
           </ul>
         </div>
       </section>
