--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              FullStack Developer, Le Wagon</li>
+              <a href="https://www.lewagon.com/">FullStack Developer, Le Wagon</a></li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               <a href="http://www.startupschool.org/companies/winwinly">Startup School - Advisor Track, Y Combinator</a></li>
