--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">CEO & CO-FOUNDER</h3>
-              <div class="subheading mb-3"><a href="http://www.winwinly.com">Winwinly</a> @ <a href="https://stationf.co/">STATION F</a>- Toronto, Canada / Paris, France</div>
+              <div class="subheading mb-3"><a href="http://www.winwinly.com">Winwinly</a> @ <a href="https://stationf.co/">STATION F</a>- Paris, France / Toronto, Canada</div>
               <p class="text-justify"> Working on the MVP/Prototype. <br>Building business model & competitive strategy. <br> Preparation of pitch deck for fundraising process.</p>
             </div>
             <div class="resume-date text-md-right">
