--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">CEO & CO-FOUNDER</h3>
               <div class="subheading mb-3"><a href="http://www.winwinly.com">Winwinly</a> @ <a href="https://stationf.co/">STATION F</a> - Paris, France / Toronto, Canada</div>
-              <p class="text-justify"> Working on the MVP/Prototype. <br>Building business model & competitive strategy. <br> Preparation of pitch deck for fundraising process.</p>
+              <p class="text-justify"> Founded a reverse auction marketplace that gathers SMEs sharing same intentions of buying. Formulated the company's vision, goals and objectives; hired and trained new employees. Participated in all aspects of business development from market research and finance to operations and marketing, ensuring that the company's vision was followed.
+              Built and maintained professional relationships with potential investors and partners; attended various startup and business events all around the world.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">May 2018 - Present</span>
@@ -115,22 +116,12 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">VP of Engineering</h3>
               <div class="subheading mb-3"><a href="http://www.ocit.ma">OCIT</a> - Casablanca, Morocco</div>
-              <p class="text-justify">Leading and actively pursuing new business and project opportunities.<br>  Implementing strategies which contribute to revenue generation and profitability.<br> 
-              Managing and/or reviewing projects from the proposal stage through to completion.</p>
+              <p class="text-justify">Managed and reviewed projects from the proposal stage through to completion including allocation of budgets, personnel and resources, billing and client relationships.
+              Implemented strategies which contribute to revenue generation and profitability.
+              Continued the ongoing development of engineering team through supporting and encouraging technical upgrading/development and providing direction and mentorship on complex issues. Led and actively pursued new business and project opportunities.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Sep 2013 - Mar 2019</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Regional Manager</h3>
-              <div class="subheading mb-3"><a href="http://www.tilllate.world">TILLLATE</a> - Paris, France</div>
-              <p class="text-justify">Hiring photographers in main "Centre region" cities : Tours, Orleans, Chartres, Blois. <br> Exclusive rights’ negotiations with main nightclubs and bars. <br>Training photographers to digital retouching on Photoshop & Picasa.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">Dec 2006 - Sep 2008</span>
             </div>
           </div>
         </div>
