changing ww description

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <a href="mailto:redahalib@gmail.com">redahalib@gmail.com</a>
           </div>
           <p class="lead mb-5">Creative individual with a background in Engineering/WebDevelopment & Entrepreneurship/Innovation. <br> <br>Passionate about #startups #ventures #disruption #IoT #blockchain #tennis #housemusic #chess. <br><br> CEO of 
-          <strong><a href="http://www.winwinly.com">Winwinly</a></strong>, a reverse auction marketplace where SMEs can negotiate all products' prices.</p>
+          <strong><a href="http://www.winwinly.com">Winwinly</a></strong>, an innovative 'eco friendly' travel marketplace.</p>
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/redahalib/">
               <i class="fab fa-linkedin-in"></i>
@@ -104,7 +104,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">CEO & CO-FOUNDER</h3>
               <div class="subheading mb-3"><a href="http://www.winwinly.com">Winwinly</a> @ <a href="https://stationf.co/">STATION F</a> - Paris, France / Toronto, Canada</div>
-              <p class="text-justify"> Founded a reverse auction marketplace that gathers SMEs sharing same intentions of buying. Formulated the company's vision, goals and objectives; hired and trained new employees. Participated in all aspects of business development from market research and finance to operations and marketing, ensuring that the company's vision was followed.
+              <p class="text-justify"> Founded an innovative platform that allows everyone to travel cheaper by aggregating flights tickets purchases to lower single units costs. Formulated the company's vision, goals and objectives; hired and trained new employees. Participated in all aspects of business development from market research and finance to operations and marketing, ensuring that the company's vision was followed.
               Built and maintained professional relationships with potential investors and partners; attended various startup and business events all around the world.</p>
             </div>
             <div class="resume-date text-md-right">
