--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
 
             <a href="mailto:redahalib@gmail.com">redahalib@gmail.com</a>
           </div>
-          <p class="lead mb-5">Creative individual with a background in Engineering/WebDevelopment & Entrepreneurship/Innovation. <br> <br>Passionate about #startups #ventures #disruption #IoT #blockchain #tennis #housemusic #chess. <br><br> CEO of 
+          <p class="lead mb-5 text-justify">Creative individual with a background in Engineering/WebDevelopment & Entrepreneurship/Innovation. <br> <br>
+			My expertise includes project design and agile management, software engineering, implementation of web applications, business innovation/strategy, and early stage investment.
+          	<br><br> Passionate about #startups #ventures #disruption #IoT #blockchain #tennis #housemusic #chess. <br><br> CEO of 
           <strong><a href="http://www.winwinly.com">Winwinly</a></strong>, an innovative 'eco friendly' travel marketplace.</p>
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/redahalib/">
@@ -114,7 +116,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">VP of Engineering</h3>
+              <h3 class="mb-0">VP Engineering</h3>
               <div class="subheading mb-3"><a href="http://www.ocit.ma">OCIT</a> - Casablanca, Morocco</div>
               <p class="text-justify">Managed and reviewed projects from the proposal stage through to completion including allocation of budgets, personnel and resources, billing and client relationships.
               Implemented strategies which contribute to revenue generation and profitability.
@@ -135,7 +137,7 @@
           <h2 class="mb-5">Education</h2>
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Advanced Master - Entrepreneurship & Innovation Mgmt</h3>
+              <h3 class="mb-0"> Master - Entrepreneurship & Innovation Management</h3>
               <div class="subheading mb-3"><a href="https://www.em-lyon.com/en/">EmLyon Business School</a> - Lyon, France / Casablanca, Morocco</div>
               <p class="text-justify">Thesis : possibility of financing mobile 4G and allowing moroccan prepaid plan holders to stay in touch with their families through targeted non-invasive phone ads.</p>
             </div>
