--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
             <a href="mailto:redahalib@gmail.com">redahalib@gmail.com</a>
           </div>
-          <p class="lead mb-5 text-justify">Creative individual with a background in Engineering/WebDevelopment & Entrepreneurship/Innovation. <br> <br>
+          <p class="text-justify">Creative individual with a background in Engineering/WebDevelopment & Entrepreneurship/Innovation. <br> <br>
 			My expertise includes project design and agile management, software engineering, implementation of web applications, business innovation/strategy, and early stage investment.
           	<br><br> Passionate about #startups #ventures #disruption #IoT #blockchain #tennis #housemusic #chess. <br><br> CEO of 
           <strong><a href="http://www.winwinly.com">Winwinly</a></strong>, an innovative 'eco friendly' travel marketplace.</p>
