--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
           <p class="text-justify">Creative individual with a background in Engineering/WebDevelopment & Entrepreneurship/Innovation. <br> <br>
 			My expertise includes project design and agile management, software engineering, implementation of web applications, business innovation/strategy, and early stage investment.
           	<br><br> Passionate about #startups #ventures #disruption #IoT #blockchain #tennis #housemusic #chess. <br><br> CEO of 
-          <strong><a href="http://www.winwinly.com">Winwinly</a></strong>, an innovative 'eco friendly' travel marketplace.</p>
+          <strong><a href="http://www.winwinly.com">Winwinly</a></strong>, an innovative TravelTech for flexible early bookers.</p>
+	  <br>	
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/redahalib/">
               <i class="fab fa-linkedin-in"></i>
@@ -106,11 +107,11 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">CEO & CO-FOUNDER</h3>
               <div class="subheading mb-3"><a href="http://www.winwinly.com">Winwinly</a> @ <a href="https://stationf.co/">STATION F</a> - Paris, France / Toronto, Canada</div>
-              <p class="text-justify"> Founded an innovative platform that allows everyone to travel cheaper by aggregating flights tickets purchases to lower single units costs. Formulated the company's vision, goals and objectives; hired and trained new employees. Participated in all aspects of business development from market research and finance to operations and marketing, ensuring that the company's vision was followed.
+              <p class="text-justify"> Founded an innovative platform that allows flexible early bookers to travel cheaper. Formulated the company's vision, goals and objectives; hired and trained new employees. Participated in all aspects of business development from market research and finance to operations and marketing, ensuring that the company's vision was followed.
               Built and maintained professional relationships with potential investors and partners; attended various startup and business events all around the world.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">May 2018 - Present</span>
+              <span class="text-primary">Sep 2018 - Present</span>
             </div>
           </div>
 
