--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <p class="text-justify">Creative individual with a background in Engineering/WebDevelopment & Entrepreneurship/Innovation. <br> <br>
 			My expertise includes project design and agile management, software engineering, implementation of web applications, business innovation/strategy, and early stage investment.
           	<br><br> Passionate about #startups #ventures #disruption #IoT #blockchain #tennis #housemusic #chess. <br><br> CEO of 
-          <strong><a href="http://www.winwinly.com">Winwinly</a></strong>, an innovative TravelTech for flexible early bookers.</p>
+          <strong><a href="http://www.winwinly.com">Winwinly</a></strong>, an innovative TravelTech platform that helps airline companies better forecast demand and optimize the Passenger Load Factor.</p>
 	  <br>	
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/redahalib/">
@@ -107,7 +107,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">CEO & CO-FOUNDER</h3>
               <div class="subheading mb-3"><a href="http://www.winwinly.com">Winwinly</a> @ <a href="https://stationf.co/">STATION F</a> - Paris, France / Toronto, Canada</div>
-              <p class="text-justify"> Founded an innovative platform that allows flexible early bookers to travel cheaper. Formulated the company's vision, goals and objectives; hired and trained new employees. Participated in all aspects of business development from market research and finance to operations and marketing, ensuring that the company's vision was followed.
+              <p class="text-justify"> Founded an innovative platform that provides real time data on flights' demand to airline companies through an API. Formulated the company's vision, goals and objectives; hired and trained new employees. Participated in all aspects of business development from market research and finance to operations and marketing, ensuring that the company's vision was followed.
               Built and maintained professional relationships with potential investors and partners; attended various startup and business events all around the world.</p>
             </div>
             <div class="resume-date text-md-right">
@@ -277,10 +277,13 @@
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               <a href="https://stationf.co/apply/founders">Founders Program, Station F incubator</a></li>
+	    <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              <a href="https://www.terrapinn.com/conference/aviation-festival/start-up-festival.stm">Featured on startup festival, World Aviation Festival</a></li>  
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               <a href="https://collisionconf.com">Featured on stage during Opening Night, Collision Conference</a></li>
-          </ul>
+	  </ul>
         </div>
       </section>
     </div>
