--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Reda's personnal website">
+    <meta name="description" content="Reda halib personnal website.">
     <meta name="author" content="Reda Halib">
 
-    <title>Reda Halib - CEO at Winwinly</title>
+    <title>Reda Halib | Tech Entrepreneur | CEO @ Winwinly & Allo Garant </title>
 
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
