--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <p class="text-justify">Creative individual with a background in Engineering/WebDevelopment & Entrepreneurship/Innovation. <br> <br>
 			My expertise includes project design and agile management, software engineering, implementation of web applications, business innovation/strategy, and early stage investment.
           	<br><br> Passionate about #startups #ventures #disruption #IoT #blockchain #tennis #housemusic #chess. <br><br> CEO of 
-          <strong><a href="http://www.winwinly.com">Winwinly</a></strong>, an innovative TravelTech platform that helps airline companies better forecast demand and optimize the Passenger Load Factor.</p>
+          <strong><a href="https://www.allogarant.com/">Allo Garant</a></strong>, a FinTech platform that provids insurance products and financial solutions to unlock opportunities in accommodation to African students and employees in France where 96% of realtors require a European guarantor.</p>
 	  <br>	
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/redahalib/">
