--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <p class="text-justify">Creative individual with a background in Engineering/WebDevelopment & Entrepreneurship/Innovation. <br> <br>
 			My expertise includes project design and agile management, software engineering, implementation of web applications, business innovation/strategy, and early stage investment.
           	<br><br> Passionate about #startups #ventures #disruption #IoT #blockchain #tennis #housemusic #chess. <br><br> CEO of 
-          <strong><a href="https://www.allogarant.com/">Allo Garant</a></strong>, a FinTech platform that provids insurance products and financial solutions to unlock opportunities in accommodation to African students and employees in France where 96% of realtors require a European guarantor.</p>
+          <strong><a href="https://www.allogarant.com/">Allo Garant</a></strong>, an hybrid FinTech/PropTech platform that unlocks opportunities in accommodation to African students and employees aiming to settle in Europe.</p>
 	  <br>	
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/redahalib/">
@@ -102,16 +102,27 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
           <h2 class="mb-5">Experience</h2>
+		
+	  <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">CEO & CO-FOUNDER</h3>
+              <div class="subheading mb-3"><a href="https://www.allogarant.com">Allo Garant</a> @ <a href="https://www.hseven.co/">H.Seven</a> - Casablanca (MA) | Lyon (FR)</div>
+              <p class="text-justify">Led vision, strategy, product conception, go-to-marketing, community management and data analytics. Negociated contracts with french real estate agencies and banks.</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Jun 2020 - Present</span>
+            </div>
+          </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">CEO & CO-FOUNDER</h3>
               <div class="subheading mb-3"><a href="http://www.winwinly.com">Winwinly</a> @ <a href="https://stationf.co/">STATION F</a> - Paris, France / Toronto, Canada</div>
-              <p class="text-justify"> Founded an innovative platform that provides real time data on flights' demand to airline companies through an API. Formulated the company's vision, goals and objectives; hired and trained new employees. Participated in all aspects of business development from market research and finance to operations and marketing, ensuring that the company's vision was followed.
+              <p class="text-justify"> Co-founded an innovative platform that provided real time data on passengers' demand to airline companies through an API. Formulated the company's vision, goals and objectives; hired and trained new employees. Participated in all aspects of business development from market research and finance to operations and marketing, ensuring that the company's vision was followed.
               Built and maintained professional relationships with potential investors and partners; attended various startup and business events all around the world.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">Sep 2018 - Present</span>
+              <span class="text-primary">Sep 2018 - Apr 2022</span>
             </div>
           </div>
 
@@ -190,9 +201,13 @@
             <li>
               <i class="fa-li fa fa-check"></i>
               Early Stage Investment</li>
+	    <li>
+              <i class="fa-li fa fa-check"></i>
+              Dropshipping (Shopify stores, Fb ads, SEO, etc.)</li>
+              <br>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Digital Marketing</li>
+              Growth Hacking</li>
               <br>
           </ul>
         </div>
@@ -278,6 +293,9 @@
               <i class="fa-li fa fa-trophy text-warning"></i>
               <a href="https://stationf.co/apply/founders">Founders Program, Station F incubator</a></li>
 	    <li>
+	      <i class="fa-li fa fa-trophy text-warning"></i>
+              <a href="https://www.hseven.co/rise-up/">Rise up, H.Seven accelerator</a></li>  
+            <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               <a href="https://www.terrapinn.com/conference/aviation-festival/start-up-festival.stm">Featured on startup festival, World Aviation Festival</a></li>  
             <li>
