--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">CEO & CO-FOUNDER</h3>
-              <div class="subheading mb-3"><a href="http://www.winwinly.com">Winwinly</a> @ <a href="https://stationf.co/">STATION F</a> - Paris, France / Toronto, Canada</div>
-              <p class="text-justify"> Co-founded an innovative platform that provided real time data on passengers' demand to airline companies through an API. Formulated the company's vision, goals and objectives; hired and trained new employees. Participated in all aspects of business development from market research and finance to operations and marketing, ensuring that the company's vision was followed.
-              Built and maintained professional relationships with potential investors and partners; attended various startup and business events all around the world.</p>
+              <div class="subheading mb-3"><a href="http://www.winwinly.com">Winwinly</a> @ <a href="https://stationf.co/">STATION F</a> - Paris (FR) | Toronto (CA)</div>
+              <p class="text-justify"> Co-founded an innovative platform that provided real time data on passengers' demand to airline companies through an API. Formulated the company's vision, goals and objectives; hired and trained new employees. Participated in all aspects of business development from market research and finance to operations and marketing.
+              Built and maintained professional relationships with potential investors and partners. Attended various startup and business events all around the world.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Sep 2018 - Apr 2022</span>
@@ -132,7 +132,7 @@
               <div class="subheading mb-3"><a href="http://www.ocit.ma">OCIT</a> - Casablanca, Morocco</div>
               <p class="text-justify">Managed and reviewed projects from the proposal stage through to completion including allocation of budgets, personnel and resources, billing and client relationships.
               Implemented strategies which contribute to revenue generation and profitability.
-              Continued the ongoing development of engineering team through supporting and encouraging technical upgrading/development and providing direction and mentorship on complex issues. Led and actively pursued new business and project opportunities.</p>
+              Continued the ongoing development of engineering team through supporting and encouraging technical upgrading/development and providing direction and mentorship on complex issues.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Sep 2013 - Mar 2019</span>
