--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              Business Strategy</li>
+              Business Innovation & Strategy</li>
             <li>
               <i class="fa-li fa fa-check"></i>
               Design Thinking</li>
@@ -200,14 +200,13 @@
               Business Model Innovation</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Early Stage Investment</li>
+              Dropshipping (Shopify stores, Fb ads, SEO, etc.)</li>
 	    <li>
               <i class="fa-li fa fa-check"></i>
-              Dropshipping (Shopify stores, Fb ads, SEO, etc.)</li>
-              <br>
+              Growth Hacking</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Growth Hacking</li>
+              Early Stage Investment & ICOs</li>
               <br>
           </ul>
         </div>
@@ -294,7 +293,7 @@
               <a href="https://stationf.co/apply/founders">Founders Program, Station F incubator</a></li>
 	    <li>
 	      <i class="fa-li fa fa-trophy text-warning"></i>
-              <a href="https://www.hseven.co/rise-up/">Rise up, H.Seven accelerator</a></li>  
+              <a href="https://www.hseven.co/rise-up/">Rise Up, H.Seven accelerator</a></li>  
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               <a href="https://www.terrapinn.com/conference/aviation-festival/start-up-festival.stm">Featured on startup festival, World Aviation Festival</a></li>  
