--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Reda halib personnal website.">
     <meta name="author" content="Reda Halib">
 
-    <title>Reda Halib | Tech Entrepreneur | CEO @ Winwinly & Allo Garant </title>
+    <title>Reda Halib | Tech Entrepreneur | CEO @ Allo Garant </title>
 
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
@@ -75,7 +75,7 @@
             <a href="mailto:redahalib@gmail.com">redahalib@gmail.com</a>
           </div>
           <p class="text-justify">Creative individual with a background in Engineering/WebDevelopment & Entrepreneurship/Innovation. <br> <br>
-			My expertise includes project design and agile management, software engineering, implementation of web applications, business innovation/strategy, and early stage investment.
+			My expertise includes project design and agile management, software engineering, implementation of web applications, business innovation/strategy, and early stage investment / ICOs.
           	<br><br> Passionate about #startups #ventures #disruption #IoT #blockchain #tennis #housemusic #chess. <br><br> CEO of 
           <strong><a href="https://www.allogarant.com/">Allo Garant</a></strong>, an hybrid FinTech/PropTech platform that unlocks opportunities in accommodation to African students and employees aiming to settle in Europe.</p>
 	  <br>	
@@ -106,7 +106,7 @@
 	  <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">CEO & CO-FOUNDER</h3>
-              <div class="subheading mb-3"><a href="https://www.allogarant.com">Allo Garant</a> @ <a href="https://www.hseven.co/">H.Seven</a> - Casablanca (MA) | Lyon (FR)</div>
+              <div class="subheading mb-3"><a href="https://www.allogarant.com">Allo Garant</a> - Lyon (FR)</div>
               <p class="text-justify">Led vision, strategy, product conception, go-to-marketing, community management and data analytics. Negociated contracts with french real estate agencies and banks.</p>
             </div>
             <div class="resume-date text-md-right">
@@ -293,7 +293,7 @@
               <a href="https://stationf.co/apply/founders">Founders Program, Station F incubator</a></li>
 	    <li>
 	      <i class="fa-li fa fa-trophy text-warning"></i>
-              <a href="https://www.hseven.co/rise-up/">Rise Up, H.Seven accelerator</a></li>  
+              <a href="https://www.hseven.co">H.Seven accelerator</a></li>  
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               <a href="https://www.terrapinn.com/conference/aviation-festival/start-up-festival.stm">Featured on startup festival, World Aviation Festival</a></li>  
