--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <a href="mailto:redahalib@gmail.com">redahalib@gmail.com</a>
           </div>
           <p class="text-justify">Creative individual with a background in Engineering/WebDevelopment & Entrepreneurship/Innovation. <br> <br>
-			My expertise includes project design and agile management, software engineering, implementation of web applications, business innovation/strategy, and early stage investment / ICOs.
+			My expertise includes project design & agile management, software engineering, implementation of web applications, business innovation/strategy, digital marketing, dropshipping, e-commerce and early stage investment / ICOs.
           	<br><br> Passionate about #startups #ventures #disruption #IoT #blockchain #tennis #housemusic #chess. <br><br> CEO of 
           <strong><a href="https://www.allogarant.com/">Allo Garant</a></strong>, an hybrid FinTech/PropTech platform that unlocks opportunities in accommodation to African students and employees aiming to settle in Europe.</p>
 	  <br>	
@@ -107,13 +107,24 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">CEO & CO-FOUNDER</h3>
               <div class="subheading mb-3"><a href="https://www.allogarant.com">Allo Garant</a> - Lyon (FR)</div>
-              <p class="text-justify">Led vision, strategy, product conception, go-to-marketing, community management and data analytics. Negociated contracts with french real estate agencies and banks.</p>
+              <p class="text-justify">Co-founded a PropTech platform that provides insurance products and financial solutions to unlock opportunities in accommodation to African students and employees in France. Led vision, strategy, product conception, go-to-marketing, community management and data analytics. Negociated contracts with french real estate agencies and banks.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Jun 2020 - Present</span>
             </div>
           </div>
 
+	  <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Dropshipping Expert</h3>
+              <div class="subheading mb-3"> Shopify - Toronto (CA)</div>
+              <p class="text-justify"> Went From $0 To $5.000/day and generated over $1.000.000+ in 18 months through few dropshipping stores I owned (pets, kids and babies). Life changing experience : I've gained valuable expertise in Facebook/Google Ads and I sold two stores in Empire Flippers.</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Oct 2020 - Apr 2022</span>
+            </div>
+          </div>
+		
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">CEO & CO-FOUNDER</h3>
