--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Dropshipping Expert</h3>
               <div class="subheading mb-3"> Shopify - Toronto (CA)</div>
-              <p class="text-justify"> Went From $0 To $5.000/day and generated over $1.000.000+ in 18 months through few dropshipping stores I owned (pets, kids and babies). Life changing experience : I've gained valuable expertise in Facebook/Google Ads and I sold two stores in Empire Flippers.</p>
+              <p class="text-justify"> Went From $0 To $5.000/day and generated over $1.000.000+ in 18 months through few dropshipping stores I owned (pets, kids and babies niche). Life changing experience : I've gained valuable expertise in Facebook/Google Ads and I sold two stores in Empire Flippers.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Oct 2020 - Apr 2022</span>
