--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">CEO & CO-FOUNDER</h3>
               <div class="subheading mb-3"><a href="https://www.allogarant.com">Allo Garant</a> - Lyon (FR)</div>
-              <p class="text-justify">Co-founded a PropTech platform that provides insurance products and financial solutions to unlock opportunities in accommodation to African students and employees in France. Led vision, strategy, product conception, go-to-marketing, community management and data analytics. Negociated contracts with french real estate agencies and banks.</p>
+              <p class="text-justify">Co-founded an hybrid FinTech/PropTech platform that unlocks opportunities in accommodation to African students and employees in France. Led vision, strategy, product conception, go-to-marketing, community management and data analytics. Negociated contracts with french real estate agencies and banks.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Jun 2020 - Present</span>
