--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 	  <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">CEO & CO-FOUNDER</h3>
-              <div class="subheading mb-3"><a href="https://www.allogarant.com">Allo Garant</a> - Lyon (FR)</div>
+              <div class="subheading mb-3"><a href="https://www.allogarant.com">Allo Garant</a></div>
               <p class="text-justify">Co-founded an hybrid FinTech/PropTech platform that unlocks opportunities in accommodation to African students and employees in France. Led vision, strategy, product conception, go-to-marketing, community management and data analytics. Negociated contracts with french real estate agencies and banks.</p>
             </div>
             <div class="resume-date text-md-right">
