--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <a href="mailto:redahalib@gmail.com">redahalib@gmail.com</a>
           </div>
           <p class="text-justify">Creative individual with a background in Engineering/WebDevelopment & Entrepreneurship/Innovation. <br> <br>
-			My expertise includes project design & agile management, software engineering, implementation of web applications, business innovation/strategy, digital marketing, dropshipping, e-commerce and early stage investment / ICOs.
+			My expertise includes project design & agile management, software engineering, implementation of web applications, business innovation/strategy, digital marketing, e-commerce and early stage investment / ICOs.
           	<br><br> Passionate about #startups #ventures #disruption #IoT #blockchain #tennis #housemusic #chess. <br><br> CEO of 
           <strong><a href="https://www.allogarant.com/">Allo Garant</a></strong>, an hybrid FinTech/PropTech platform that unlocks opportunities in accommodation to African students and employees aiming to settle in Europe.</p>
 	  <br>	
