--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Reda halib personnal website.">
-    <meta name="author" content="Reda Halib">
+    <meta name="description" content="Alex Reda halib personnal website.">
+    <meta name="author" content="Alex Reda Halib">
 
-    <title>Reda Halib | Tech Entrepreneur | CEO @ Allo Garant </title>
+    <title>Alex Reda Halib | Tech Entrepreneur | CEO @ Allo Garant </title>
 
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
@@ -70,7 +70,7 @@
           <h1 class="mb-0">Reda
             <span class="text-primary">Halib</span>
           </h1>
-          <div class="subheading mb-5"> (+33) 609-278-636  ·
+          <div class="subheading mb-5"> (+33) 609-278-636  · (+1) 647-691-3303  ·
 
             <a href="mailto:redahalib@gmail.com">redahalib@gmail.com</a>
           </div>
@@ -80,7 +80,7 @@
           <strong><a href="https://www.allogarant.com/">Allo Garant</a></strong>, an hybrid FinTech/PropTech platform that unlocks opportunities in accommodation to African students and employees aiming to settle in Europe.</p>
 	  <br>	
           <div class="social-icons">
-            <a href="https://www.linkedin.com/in/redahalib/">
+            <a href="https://www.linkedin.com/in/alexhalib/">
               <i class="fab fa-linkedin-in"></i>
             </a>
              <a href="https://angel.co/redahalib">
@@ -161,7 +161,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0"> Master - Entrepreneurship & Innovation Management</h3>
-              <div class="subheading mb-3"><a href="https://www.em-lyon.com/en/">EmLyon Business School</a> - Lyon, France / Casablanca, Morocco</div>
+              <div class="subheading mb-3"><a href="https://www.em-lyon.com/en/">EmLyon Business School</a> - Lyon, France</div>
               <p class="text-justify">Thesis : possibility of financing mobile 4G and allowing moroccan prepaid plan holders to stay in touch with their families through targeted non-invasive phone ads.</p>
             </div>
             <div class="resume-date text-md-right">
