--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Reda Halib</span>
+        <span class="d-block d-lg-none">Alex Reda Halib</span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="reda.png" alt="">
         </span>
@@ -72,7 +72,7 @@
           </h1>
           <div class="subheading mb-5"> (+33) 609-278-636  · (+1) 647-691-3303  ·
 
-            <a href="mailto:redahalib@gmail.com">redahalib@gmail.com</a>
+            <a href="mailto:redahalib@gmail.com">halibalex@gmail.com</a>
           </div>
           <p class="text-justify">Creative individual with a background in Engineering/WebDevelopment & Entrepreneurship/Innovation. <br> <br>
 			My expertise includes project design & agile management, software engineering, implementation of web applications, business innovation/strategy, digital marketing, e-commerce and early stage investment / ICOs.
