--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">Reda
+          <h1 class="mb-0">Alex Reda
             <span class="text-primary">Halib</span>
           </h1>
           <div class="subheading mb-5"> (+33) 609-278-636  · (+1) 647-691-3303  ·
