--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </h1>
           <div class="subheading mb-5"> (+33) 609-278-636  · (+1) 647-691-3303  ·
 
-            <a href="mailto:redahalib@gmail.com">halibalex@gmail.com</a>
+            <a href="mailto:halibalex@gmail.com">halibalex@gmail.com</a>
           </div>
           <p class="text-justify">Creative individual with a background in Engineering/WebDevelopment & Entrepreneurship/Innovation. <br> <br>
 			My expertise includes project design & agile management, software engineering, implementation of web applications, business innovation/strategy, digital marketing, e-commerce and early stage investment / ICOs.
